code v0.2(add queue + compl logger worker)

--- a/logging/CMakeLists.txt
+++ b/logging/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library(logging STATIC)
 
-target_include_directories(logging PUBLIC include/public_includes)
-target_include_directories(logging PRIVATE include/private_includes)
+target_include_directories(
+    logging PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/public_includes)
+target_include_directories(
+    logging PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/private_includes)
+
+# PRIVATE
 
 add_subdirectory(src)
