--- a/logging/src/utils/CMakeLists.txt
+++ b/logging/src/utils/CMakeLists.txt
@@ -1,1 +1,6 @@
+set(UTILS_SRC_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/queue.cpp)
+
 add_subdirectory(io)
+
+target_sources(logging PRIVATE ${UTILS_SRC_FILES})
