--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 cmake_minimum_required(VERSION 3.12)
 
 project(
-    logging
+    test
     VERSION 1.0
     DESCRIPTION "Simple logger"
     LANGUAGES CXX
@@ -12,3 +12,5 @@ project(
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(logging)
+add_subdirectory(bin)
+
