--- a/logging/src/utils/io/CMakeLists.txt
+++ b/logging/src/utils/io/CMakeLists.txt
@@ -1,6 +1,2 @@
-set(IO_SRC_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/fileio.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/stdio.cpp)
-
-
-target_sources(logging PRIVATE ${IO_SRC_FILES})
+add_subdirectory(async)
+add_subdirectory(sync)
