--- a/logging/src/logger/CMakeLists.txt
+++ b/logging/src/logger/CMakeLists.txt
@@ -4,4 +4,4 @@ set(LOGGER_SRC_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/utils.cpp)
 
 
-target_sources(logging PRIVATE ${LOGGER_SRC_FILES})
+target_sources(WiseLogging PRIVATE ${LOGGER_SRC_FILES})
